--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2",
-    "next": "12.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@reduxjs/toolkit": "^1.8.2",
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-id-swiper": "^4.0.0",
-    "react-redux": "^7.2.6",
-    "swiper": "^7.2.0"
+    "react-redux": "^8.0.2",
+    "swiper": "^8.2.3"
   },
   "devDependencies": {
-    "eslint": "7",
-    "eslint-config-next": "12.0.1"
+    "@types/node": "17.0.42",
+    "@types/react": "18.0.12",
+    "@types/react-dom": "18.0.5",
+    "eslint": "8.17.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.7.3"
   }
 }
