--- a/admin/package.json
+++ b/admin/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@themesberg/flowbite": "^1.3.0",
+    "axios": "^0.27.2",
     "flowbite": "^1.4.7",
+    "flowbite-react": "^0.0.27",
     "framer-motion": "^6.3.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
